[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
tracing-subscriber = "0.3.16"
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"